google-cloud/terraform/gke-api-gateway/resources/create-gateway-ssl.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api
  
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: gateway-api
  annotations:
    networking.gke.io/certmap: example-ssl-cert-map
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 80
      hostname: "*.example.com"
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All    
    - name: https-listener
      protocol: HTTPS
      port: 443
      hostname: "*.example.com"
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All                
  addresses:
    - type: NamedAddress
      value: examplelabs-webapps-ip

# https://cloud.google.com/kubernetes-engine/docs/how-to/deploying-gateways
